# ultimatevocalremovergui

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: setup_uv.sh
uvr_cli/: __init__.py  runner.py
