[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultimatevocalremovergui"
version = "5.6.0"
description = "Headless utilities extracted from Ultimate Vocal Remover GUI."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "altgraph>=0.17.3",
    "audioread>=3.0.0",
    "certifi>=2023.7.22",
    "cffi>=1.15.1",
    "cryptography>=41.0.5",
    "diffq==0.2.3",
    "einops>=0.6.0",
    "future>=0.18.3",
    "julius>=0.2.7",
    "kthread>=0.2.3",
    "librosa==0.9.2",
    "llvmlite==0.39.1",
    "matchering==2.0.6",
    "ml_collections==0.1.1",
    "natsort>=8.3.1",
    "numba==0.56.4",
    "numpy==1.23.5",
    "omegaconf==2.2.3",
    "opencv-python==4.8.1.78",
    "onnx==1.14.1",
    "onnxruntime==1.14.1",
    "onnx2pytorch==0.4.1",
    "Pillow==9.5.0",
    "playsound==1.2.2",
    "psutil==5.9.5",
    "pydub==0.25.1",
    "pyglet==1.5.27",
    "pyperclip==1.8.2",
    "pyrubberband==0.3.0",
    "pytorch_lightning==2.0.9.post0",
    "PyYAML==6.0.1",
    "resampy==0.4.2",
    "samplerate==0.1.0",
    "scipy==1.10.1",
    "screeninfo>=0.8.1",
    "soundfile==0.12.1",
    "soundstretch==1.2",
    "torch==2.1.2",
    "torchaudio==2.1.2",
    "tqdm>=4.66.1",
    "urllib3>=2.0.7",
    "wget>=3.2",
]

[tool.setuptools.packages.find]
include = ["uvr_cli*", "lib_v5*", "demucs*", "gui_data*"]

[tool.setuptools.package-data]
gui_data = ["**/*"]
lib_v5 = ["**/*"]
demucs = ["**/*"]

[project.urls]
homepage = "https://github.com/Anjok07/ultimatevocalremovergui"
repository = "https://github.com/Anjok07/ultimatevocalremovergui"
